--- a/Styles/all_styles.css
+++ b/Styles/all_styles.css
@@ -1,6 +1,6 @@
 body {
     max-width: 1440px;
-    background-color: black;
+    background: linear-gradient(#050301 , #150C01);
     color: white;
     border: 1px solid white;
     font-family: sans-serif, Times, serif;
@@ -10,30 +10,36 @@ body {
 /*
 Основные стили для header-a
 */
-nav {
+.header_navigation {
     display: flex;
     justify-content: space-between;
     text-align: center;
 }
-nav a {
+.header_navigation a {
     color: white;
     text-decoration: none;
     display: block;
     align-self: center;
+    white-space: nowrap; /* Текст не складывается в гармошку */
 }
-nav ul {
+.header_navigation ul {
     display: flex;
     text-decoration: none;
     list-style: none;
 }
-nav ul li {
-    margin-left: 88px;
+.header_navigation ul li {
+    margin: 0 0 0 88px;
+    line-height: 12px;
     align-self: center;
 }
 .logo {
     margin: 13px 55px;
 }
-.contact {
+.header_navigation-image {
+    padding: 0;
+    margin: 0;
+}
+.contact_us {
     background-color: #FA9021;
     padding: 10px;
     margin: 0 63px 0 37px;
