--- a/Styles/all_styles.css
+++ b/Styles/all_styles.css
@@ -42,7 +42,7 @@ body {
 }
 .contact_us {
     background-color: #FA9021;
-    padding: 10px;
+    padding: 10px 28px;
     margin: 0 63px 0 37px;
     border-radius: 10px;
 }
