--- a/styles/about_us.css
+++ b/styles/about_us.css
@@ -48,7 +48,7 @@
 }
 .firstblock-image {
     position: relative;
-    left: 161px;
+    left: 143px;
 }
 
 /*
@@ -101,13 +101,65 @@
 }
 
 /*
-Блок с картинкой девушки и текстом
+Третий блок с картинкой девушки и текстом
 */
 .main_thirdblock {
-    position: static;
+    display: flex;
     width: 1440px;
-    height: 603px;
     background-color: #1C140F;
     margin-top: 80px;
-    margin-left: -126px;
+    margin-left: -143px;
+}
+.main_thirdblock>img {
+    margin: 60px 100px 60px 100px;
+}
+.thirdblock-content {
+    padding: 134px 200px 60px 0;
+}
+.thirdblock-content>p:nth-child(1) {
+    line-height: 202.5%;
+    font-size: 16px;
+}
+.thirdblock-content>p:nth-child(2) {
+    line-height: 157.5%;
+    font-size: 28px;
+    font-weight: bold;
+}
+.thirdblock-content>p:nth-child(3) {
+    line-height: 202.5%;
+    font-size: 16px;
+}
+
+/*
+Четвёртый блок с лицами нашей команды
+*/
+.main_fourblock {
+    margin-top: 60px;
+}
+.fourblock-content {
+    display: flex;
+    justify-content: space-between;
+}
+.main_fourblock>p {
+    line-height: 180.5%;
+    font-weight: bold;
+    font-size: 25px;
+}
+.fourblock-content_page1, .fourblock-content_page2, .fourblock-content_page3, .fourblock-content_page4 {
+    text-align: center;
+    background-color: #1C140F;
+    padding: 20px 70px;
+    border-radius: 20px;
+}
+.fourblock-content_page1>p:nth-child(2), .fourblock-content_page2>p:nth-child(2), .fourblock-content_page3>p:nth-child(2), .fourblock-content_page4>p:nth-child(2) {
+    font-weight: bold;
+    font-size: 19px;
+    line-height: 202.5%;
+    margin: 0;
+}
+.fourblock-content_page1>p:nth-child(3), .fourblock-content_page2>p:nth-child(3), .fourblock-content_page3>p:nth-child(3), .fourblock-content_page4>p:nth-child(3) {
+    font-size: 16px;
+    font-weight: lighter;
+    line-height: 202.5%;
+    margin: 0;
 }
