--- a/Styles/main.css
+++ b/Styles/main.css
@@ -31,7 +31,7 @@
     color: white;
     background: linear-gradient(to right, #E87D0E, #FB9E3C );
     border-radius: 50px;
-    padding: 15px 30px 15px 30px;
+    padding: 15px 30px;
     line-height: 48px;
 }
 
