--- a/styles/about_us.css
+++ b/styles/about_us.css
@@ -38,8 +38,8 @@
 .firstblock-content_btn>a {
     text-decoration: none;
     color: white;
-    border-radius: 20px;
-    padding: 15px;
+    border-radius: 50px;
+    padding: 15px 25px;
     margin: 20px auto;
     background: linear-gradient(to right, #FA8305, #FB9E3C);
 }
