--- a/styles/services.css
+++ b/styles/services.css
@@ -156,3 +156,85 @@
     line-height: 187.5%;
     text-align: center;
 }
+.fourblock-content {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 40px;
+    padding-bottom: 20px;
+}
+.fourblock-content_block {
+    width: 330px;
+    height: 200px;
+    padding: 20px;
+    border-radius: 15px;
+}
+.fourblock-content_block:nth-child(1) {
+    border: 1px solid gold;
+    background-color: #1C140F;
+}
+.fourblock-content_block:nth-child(2), .fourblock-content_block:nth-child(3) {
+    border: 1px solid white;
+    background-color: #1C140F;
+}
+.fourblock-content_block--image {
+    display: flex;
+    justify-content: space-between;
+}
+.fourblock-content_block--image__name {
+    display: flex;
+}
+.fourblock-content_block--image__name>img {
+    width: 50px;
+    height: 50px;
+    margin: auto 20px auto auto;
+}
+.fourblock-content_block--image__text>p:first-child {
+    font-size: 18px;
+    font-weight: bold;
+}
+.fourblock-content_block--image__text>p:last-child {
+    font-size: 14px;
+    line-height: 0%;
+    color: #4F5665;
+}
+.fourblock-content_block--image__star {
+    display: flex;
+    height: 52px;
+    padding: 15px;
+}
+.fourblock-content_block--image__star>img {
+    width: 12px;
+    height: 12px;
+    margin: auto auto auto 10px;
+}
+.fourblock-content_block>p {
+    margin-top: 20px;
+}
+.fourblock-footer {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 30px;
+}
+.fourblock-footer_points {
+    margin-left: 60px;
+}
+.fourblock-footer_points>img {
+    margin: 22px 5px;
+}
+.fourblock-footer_arrow {
+    margin-right: -20px;
+    display: flex;
+    justify-content: space-around;
+    height: 100px;
+}
+.fourblock-footer_arrow>img:nth-child(1) {
+    width: 60px;
+    height: 60px;
+}
+.fourblock-footer_arrow>img:nth-child(2) {
+    width: 150px;
+    height: 150px;
+    position: relative;
+    top: -30.55px;
+    left: -30px;
+}
