--- a/styles/contact_us.css
+++ b/styles/contact_us.css
@@ -22,6 +22,7 @@
 }
 .firstblock-navigation>a:last-child {
     color: #E47500;
+    width: max-content;
 }
 .firstblock-text {
     text-align: center;
