--- a/all_styles/about_us.css
+++ b/all_styles/about_us.css
@@ -41,7 +41,7 @@
     border-radius: 50px;
     padding: 15px 25px;
     margin: 20px auto;
-    background: linear-gradient(to right, #FA8305, #FB9E3C);
+    animation: button_color_anim 4s infinite;;
 }
 .firstblock-content_btn>a>img {
     margin-left: 10px;
