just black fone

--- a/all_styles/all_styles.css
+++ b/all_styles/all_styles.css
@@ -9,6 +9,7 @@ body {
     font-family: sans-serif, Times, serif;
     margin: 0 auto;
     font-family: 'Gilroy';
+    background-color: black;
 }
 /* 
 Анимация перехода к начальному состоянию
