Update 11.2 | new fone

--- a/all_styles/all_styles.css
+++ b/all_styles/all_styles.css
@@ -3,7 +3,7 @@
     src: url(../fonts/Gilroy\ SemiBold-normal-600-100.otf);
 }
 html {
-    background-color: black;
+    background: linear-gradient(#050301 , #150C01);
 }
 body {
     width: 1440px;
